--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="es">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="estilos.css">
+</head>
+<body>
+    <section class="container-fluid" id="streaming">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-7">
+                    <img src="imagenes-trabajo-final/streaming.png" alt="esta es una imagen">
+                </div>
+                <div class="col-xl-5">
+                    <h2>STREAMING</h2>
+                    <p>Contamos con un equipo de profesionales especializado en la producción de <b> conferencias, talleres, seminarios, eventos corporativos,</b> entre otros. Que atenderán tu evento desde la planificación, estructura, guiones, ensayos, etc. Con equipos y tecnología de punta que garantizarán una buena transmisión con efectos y maquetaciones que personalizarán tu evento para brindar a los participantes una experiencia única. </p>
+                </div>
+            </div>
+        </div>
+    </section>
+</body>
+</html>
