--- a/index.html
+++ b/index.html
@@ -23,5 +23,33 @@
             </div>
         </div>
     </section>
+    <section class="container-fluid" id="chromakey">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-6">
+                    <h2>CHROMA KEY</h2>
+                    <p>
+                        Realiza tu evento en línea y compártelo en redes sociales, con un aspecto personalizado con
+                        el branding de tu empresa y/o marca.
+                        <br>
+                        Contamos con licencia para realizar transmisiones en multi-plataformas como: Zoom, Google
+                        Meets, Youtube, Facebook Live. Con interpretación simultánea
+                        <br>
+                        <br>
+                        Nuestro equipo creativo diseña el aspecto visual de la plataforma para hacerlo más cercano a
+                        tu marca, desde
+                        <br> escenarios virtuales, fondos de pantallas, maquetaciones y más.
+                        <br>
+                        <br>
+                        Asimismo, contamos con nuestro propio estudio chroma que nos permite ofrecerles opciones
+                        personalizadas, especiales y únicas para su evento.
+                    </p>
+                </div>
+                <div class="col-xl-6">
+                    <img src="imagenes-trabajo-final/chroma-key.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
