--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div class="col-xl-4">
                         <p>
                             Nuestra empresa cuenta con un sistema creado especialmente para habilitar este servicio de Citas de Negocios en cualquiera de nuestras formas de hacer eventos virtuales.
-                            Les ofrecemos integrar este servicio a la opción que ustedes elijan para hacer su evento virtual. <br> Con este sistema los participantes de su evento pueden agendarse 
+                            Les ofrecemos integrar este servicio a la opción que ustedes elijan para hacer su evento virtual. <br> <br> Con este sistema los participantes de su evento pueden agendarse 
                             citas con empresas y/o participantes de su interés, a través de nuestro sistema que les muestra la lista de empresas que ustedes designen, para solicitar de manera automatizada 
-                            las citas, de acuerdo con la disponibilidad y previa confirmación de los participantes; podrán reunirse de manera mucho más directa a través de zoom en el día y la hora coordinada. <br> 
+                            las citas, de acuerdo con la disponibilidad y previa confirmación de los participantes; podrán reunirse de manera mucho más directa a través de zoom en el día y la hora coordinada. <br> <br>
                             Este es un servicio muy valorado por nuestros clientes para hacer networking a través de nuestras plataformas, donde los asistentes podrán interactuar y conectar, todo a tiempo real; 
                             con la integración con plataformas de videoconferencias, gestión de citas, comunicación directa.
                         </p>
