--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
                 </div>
                 <div class="col-xl-5">
                     <h2>STREAMING</h2>
-                    <p>Contamos con un equipo de profesionales especializado en la producción de <b> conferencias, talleres, seminarios, eventos corporativos,</b> entre otros. Que atenderán tu evento desde la planificación, estructura, guiones, ensayos, etc. Con equipos y tecnología de punta que garantizarán una buena transmisión con efectos y maquetaciones que personalizarán tu evento para brindar a los participantes una experiencia única. </p>
+                    <p>
+                       Contamos con un equipo de profesionales especializado en la producción de <b> 
+                       conferencias, talleres, seminarios, eventos corporativos,</b> entre otros.
+                       Que atenderán tu evento desde la planificación, estructura, guiones, ensayos, etc. 
+                       Con equipos y tecnología de punta que garantizarán una buena transmisión con efectos
+                       y maquetaciones que personalizarán tu evento para brindar a los participantes una 
+                       experiencia única. 
+                    </p>
                 </div>
             </div>
         </div>
@@ -51,29 +58,47 @@
             </div>
         </div>
     </section>
-    <section>
-        <div class="container-fluid" id="RNV">
-            <div class="container">
-                <div class="row">
-                    <div>            
-                        <h2 class="título">RUEDA DE NEGOCIOS VIRTUALES</h2>
-                    </div>
-                    <div class="col-xl-4">
+    <section class="container-fluid" id="rnv">
+        <div class="container">
+            <div class="row">
+                <div>       
+                    <h2 class="título">RUEDAS DE NEGOCIOS VIRTUALES</h2>
+                </div>
+                <div class="col-xl-5">  
                         <p>
-                            Nuestra empresa cuenta con un sistema creado especialmente para habilitar este servicio de Citas de Negocios en cualquiera de nuestras formas de hacer eventos virtuales.
-                            Les ofrecemos integrar este servicio a la opción que ustedes elijan para hacer su evento virtual. <br> Con este sistema los participantes de su evento pueden agendarse 
-                            citas con empresas y/o participantes de su interés, a través de nuestro sistema que les muestra la lista de empresas que ustedes designen, para solicitar de manera automatizada 
-                            las citas, de acuerdo con la disponibilidad y previa confirmación de los participantes; podrán reunirse de manera mucho más directa a través de zoom en el día y la hora coordinada. <br> 
-                            Este es un servicio muy valorado por nuestros clientes para hacer networking a través de nuestras plataformas, donde los asistentes podrán interactuar y conectar, todo a tiempo real; 
-                            con la integración con plataformas de videoconferencias, gestión de citas, comunicación directa.
+                        Nuestra empresa cuenta con un sistema creado especialmente para habilitar este servicio
+                        de Citas de Negocios en cualquiera de nuestras formas de hacer eventos virtuales.
+                        Les ofrecemos integrar este servicio a la opción que ustedes elijan para hacer su evento
+                        virtual. 
+                        <br> 
+                        <br>
+                        Con este sistema los participantes de su evento pueden agendarse citas con empresas y/o participantes 
+                        de su interés, a través de nuestro sistema que les muestra la lista de empresas que ustedes designen, para solicitar de manera automatizada 
+                        las citas, de acuerdo con la disponibilidad y previa confirmación de los participantes; podrán 
+                        reunirse de manera mucho más directa a través de zoom en el día y la hora coordinada. 
+                        <br> 
+                        <br>
+                        Este es un servicio muy valorado por nuestros clientes para hacer networking a través 
+                        de nuestras plataformas, donde los asistentes podrán interactuar y conectar, todo a tiempo real; 
+                        con la integración con plataformas de videoconferencias, gestión de citas, comunicación directa.
                         </p>
-                    </div>
-                    <div class="col-xl-8">
-                        <img src="imagenes-trabajo-final/ruedas.png" alt="">
-                    </div>
+                </div>
+                <div class="col-xl-7">
+                    <img src="imagenes-trabajo-final/ruedas.png" alt="">
                 </div>
             </div>
-        </div> 
+        </div>
+    </section> 
+    <section>
+                    <div>            
+                        <h2 class="título">EVENTOS REALIZADOS</h2>
+                    </div>                  
+
+
+
+
+
+
     </section>
 </body>
 </html>
