--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="estilos.css">
 </head>
+
 <body>
     <section class="container-fluid" id="streaming">
         <div class="container">
@@ -18,7 +19,11 @@
                 </div>
                 <div class="col-xl-5">
                     <h2>STREAMING</h2>
-                    <p>Contamos con un equipo de profesionales especializado en la producción de <b> conferencias, talleres, seminarios, eventos corporativos,</b> entre otros. Que atenderán tu evento desde la planificación, estructura, guiones, ensayos, etc. Con equipos y tecnología de punta que garantizarán una buena transmisión con efectos y maquetaciones que personalizarán tu evento para brindar a los participantes una experiencia única. </p>
+                    <p>Contamos con un equipo de profesionales especializado en la producción de <b> conferencias,
+                            talleres, seminarios, eventos corporativos,</b> entre otros. Que atenderán tu evento desde
+                        la planificación, estructura, guiones, ensayos, etc. Con equipos y tecnología de punta que
+                        garantizarán una buena transmisión con efectos y maquetaciones que personalizarán tu evento para
+                        brindar a los participantes una experiencia única. </p>
                 </div>
             </div>
         </div>
@@ -55,17 +60,25 @@
         <div class="container-fluid" id="RNV">
             <div class="container">
                 <div class="row">
-                    <div>            
+                    <div>
                         <h2 class="título">RUEDA DE NEGOCIOS VIRTUALES</h2>
                     </div>
                     <div class="col-xl-4">
                         <p>
-                            Nuestra empresa cuenta con un sistema creado especialmente para habilitar este servicio de Citas de Negocios en cualquiera de nuestras formas de hacer eventos virtuales.
-                            Les ofrecemos integrar este servicio a la opción que ustedes elijan para hacer su evento virtual. <br> <br> Con este sistema los participantes de su evento pueden agendarse 
-                            citas con empresas y/o participantes de su interés, a través de nuestro sistema que les muestra la lista de empresas que ustedes designen, para solicitar de manera automatizada 
-                            las citas, de acuerdo con la disponibilidad y previa confirmación de los participantes; podrán reunirse de manera mucho más directa a través de zoom en el día y la hora coordinada. <br> <br>
-                            Este es un servicio muy valorado por nuestros clientes para hacer networking a través de nuestras plataformas, donde los asistentes podrán interactuar y conectar, todo a tiempo real; 
-                            con la integración con plataformas de videoconferencias, gestión de citas, comunicación directa.
+                            Nuestra empresa cuenta con un sistema creado especialmente para habilitar este servicio de
+                            Citas de Negocios en cualquiera de nuestras formas de hacer eventos virtuales.
+                            Les ofrecemos integrar este servicio a la opción que ustedes elijan para hacer su evento
+                            virtual. <br> <br> Con este sistema los participantes de su evento pueden agendarse
+                            citas con empresas y/o participantes de su interés, a través de nuestro sistema que les
+                            muestra la lista de empresas que ustedes designen, para solicitar de manera automatizada
+                            las citas, de acuerdo con la disponibilidad y previa confirmación de los participantes;
+                            podrán reunirse de manera mucho más directa a través de zoom en el día y la hora coordinada.
+                            <br> <br>
+                            Este es un servicio muy valorado por nuestros clientes para hacer networking a través de
+                            nuestras plataformas, donde los asistentes podrán interactuar y conectar, todo a tiempo
+                            real;
+                            con la integración con plataformas de videoconferencias, gestión de citas, comunicación
+                            directa.
                         </p>
                     </div>
                     <div class="col-xl-8">
@@ -73,7 +86,35 @@
                     </div>
                 </div>
             </div>
-        </div> 
+        </div>
+    </section>
+    <section class="container-fluid" id="cuadros">
+        <div class="container">
+            <div class="row-xl-3">
+                <div class="col">
+                    <h2>EVENTOS REALIZADOS </h2>
+                </div>
+                <div class="col-xl-3">
+                    <div class="row-xl-3" id="1">
+                        <img src="/imagenes-trabajo-final/icono-1.png" alt="">
+                        <h4>EVENTOS VISTAS 3D</h4>
+                    </div>
+                    <div class="row-xl-3" id="2">
+                        <img src="/imagenes-trabajo-final/icono-2.png" alt="">
+                        <h4>EVENTOS ENTORNO 360°</h4>
+                    </div>
+                    <div class="row-xl-3" id="3">
+                        <img src="/imagenes-trabajo-final/icono-3.png" alt="">
+                        <h4>STREAMING Y CHROMA KEY</h4>
+                    </div>
+                    <div class="row-xl-3" id="4">
+                        <img src="/imagenes-trabajo-final/icono-4.png" alt="">
+                        <h4>RUEDAS DE NEGOCIOS</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
+
 </html>
