--- a/index.html
+++ b/index.html
@@ -19,13 +19,6 @@
                 </div>
                 <div class="col-xl-5">
                     <h2>STREAMING</h2>
-<<<<<<< HEAD
-                    <p>Contamos con un equipo de profesionales especializado en la producción de <b> conferencias,
-                            talleres, seminarios, eventos corporativos,</b> entre otros. Que atenderán tu evento desde
-                        la planificación, estructura, guiones, ensayos, etc. Con equipos y tecnología de punta que
-                        garantizarán una buena transmisión con efectos y maquetaciones que personalizarán tu evento para
-                        brindar a los participantes una experiencia única. </p>
-=======
                     <p>
                        Contamos con un equipo de profesionales especializado en la producción de <b> 
                        conferencias, talleres, seminarios, eventos corporativos,</b> entre otros.
@@ -34,7 +27,6 @@
                        y maquetaciones que personalizarán tu evento para brindar a los participantes una 
                        experiencia única. 
                     </p>
->>>>>>> c992247d513ad14dc93354dc6169d719a7727021
                 </div>
             </div>
         </div>
@@ -67,31 +59,6 @@
             </div>
         </div>
     </section>
-<<<<<<< HEAD
-    <section>
-        <div class="container-fluid" id="RNV">
-            <div class="container">
-                <div class="row">
-                    <div>
-                        <h2 class="título">RUEDA DE NEGOCIOS VIRTUALES</h2>
-                    </div>
-                    <div class="col-xl-4">
-                        <p>
-                            Nuestra empresa cuenta con un sistema creado especialmente para habilitar este servicio de
-                            Citas de Negocios en cualquiera de nuestras formas de hacer eventos virtuales.
-                            Les ofrecemos integrar este servicio a la opción que ustedes elijan para hacer su evento
-                            virtual. <br> <br> Con este sistema los participantes de su evento pueden agendarse
-                            citas con empresas y/o participantes de su interés, a través de nuestro sistema que les
-                            muestra la lista de empresas que ustedes designen, para solicitar de manera automatizada
-                            las citas, de acuerdo con la disponibilidad y previa confirmación de los participantes;
-                            podrán reunirse de manera mucho más directa a través de zoom en el día y la hora coordinada.
-                            <br> <br>
-                            Este es un servicio muy valorado por nuestros clientes para hacer networking a través de
-                            nuestras plataformas, donde los asistentes podrán interactuar y conectar, todo a tiempo
-                            real;
-                            con la integración con plataformas de videoconferencias, gestión de citas, comunicación
-                            directa.
-=======
     <section class="container-fluid" id="rnv">
         <div class="container">
             <div class="row">
@@ -115,7 +82,6 @@
                         Este es un servicio muy valorado por nuestros clientes para hacer networking a través 
                         de nuestras plataformas, donde los asistentes podrán interactuar y conectar, todo a tiempo real; 
                         con la integración con plataformas de videoconferencias, gestión de citas, comunicación directa.
->>>>>>> c992247d513ad14dc93354dc6169d719a7727021
                         </p>
                 </div>
                 <div class="col-xl-7">
@@ -123,48 +89,30 @@
                 </div>
             </div>
         </div>
-<<<<<<< HEAD
-    </section>
+    </section> 
     <section class="container-fluid" id="cuadros">
         <div class="container">
-            <div class="row-xl-3">
-                <div class="col">
-                    <h2>EVENTOS REALIZADOS </h2>
-                </div>
-                <div class="col-xl-3">
-                    <div class="row-xl-3" id="1">
+            <div class="row">
+                <h2 class="título">EVENTOS REALIZADOS </h2>
+                    <div class="col-xl-3" id="1">
                         <img src="/imagenes-trabajo-final/icono-1.png" alt="">
-                        <h4>EVENTOS VISTAS 3D</h4>
+                        <h4>EVENTOS <br> VISTAS 3D</h4>
                     </div>
-                    <div class="row-xl-3" id="2">
+                    <div class="col-xl-3" id="2">
                         <img src="/imagenes-trabajo-final/icono-2.png" alt="">
                         <h4>EVENTOS ENTORNO 360°</h4>
                     </div>
-                    <div class="row-xl-3" id="3">
+                    <div class="col-xl-3" id="3">
                         <img src="/imagenes-trabajo-final/icono-3.png" alt="">
                         <h4>STREAMING Y CHROMA KEY</h4>
                     </div>
-                    <div class="row-xl-3" id="4">
+                    <div class="col-xl-3" id="4">
                         <img src="/imagenes-trabajo-final/icono-4.png" alt="">
                         <h4>RUEDAS DE NEGOCIOS</h4>
                     </div>
-                </div>
             </div>
         </div>
-=======
     </section> 
-    <section>
-                    <div>            
-                        <h2 class="título">EVENTOS REALIZADOS</h2>
-                    </div>                  
-
-
-
-
-
-
->>>>>>> c992247d513ad14dc93354dc6169d719a7727021
-    </section>
 </body>
-
 </html>
+
