--- a/index.html
+++ b/index.html
@@ -96,19 +96,23 @@
                 <h2 class="título">EVENTOS REALIZADOS </h2>
                     <div class="col-xl-3" id="1">
                         <img src="/imagenes-trabajo-final/icono-1.png" alt="">
-                        <h4>EVENTOS <br> VISTAS 3D</h4>
+                        <h4>EVENTOS <br> VER MÁS</h4>
+                        <button type="button" class="boton">Haz clic aquí</button>
                     </div>
                     <div class="col-xl-3" id="2">
-                        <img src="/imagenes-trabajo-final/icono-2.png" alt="">
+                        <img src="imagenes-trabajo-final/icono-2.png" alt="">
                         <h4>EVENTOS ENTORNO 360°</h4>
+                        <button type="button" class="boton">VER MÁS</button>
                     </div>
                     <div class="col-xl-3" id="3">
-                        <img src="/imagenes-trabajo-final/icono-3.png" alt="">
+                        <img src="imagenes-trabajo-final/icono-3.png" alt="">
                         <h4>STREAMING Y CHROMA KEY</h4>
+                        <button type="button" class="boton">VER MÁS</button>
                     </div>
                     <div class="col-xl-3" id="4">
-                        <img src="/imagenes-trabajo-final/icono-4.png" alt="">
+                        <img src="imagenes-trabajo-final/icono-4.png" alt="">
                         <h4>RUEDAS DE NEGOCIOS</h4>
+                        <button type="button" class="boton">VER MÁS</button>
                     </div>
             </div>
         </div>
